Introduced IPort interface and modified all core model interfaces, classes and tests accordingly.
Update issue 7